--- a/index.html
+++ b/index.html
@@ -8,6 +8,25 @@
     <link rel="stylesheet" href="css/syle.css">
 </head>
 <body>
-    
+    <!--header-->
+    <header>
+        <img src="img/Logo.png" alt="">
+    </header>
+<!--/header-->
+
+<!--main-->
+    <main>
+        <div class="container">
+
+            <!--nav-->
+            <nav>
+
+            </nav>
+            <!--/nav-->
+            <div class="task"></div>
+
+        </div>
+    </main>
+<!--/main-->
 </body>
 </html>
