--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
 <body>
     <!--header-->
     <header>
-        <img src="img/Logo.png" alt="">
+        <img class="logo" src="img/Logo.png" alt="">
+        <h1 class="logo-title">Toboolist</h1>
     </header>
 <!--/header-->
 
