pagina incompleta, ma correzioni sufficenti

--- a/index.html
+++ b/index.html
@@ -20,11 +20,74 @@
         <div class="container">
 
             <!--nav-->
-            <nav>
-
+            <nav class="actions">
+                <button class="btn btn1">Add Task</button>
+                <button class="btn btn2">Add Section</button>
             </nav>
             <!--/nav-->
-            <div class="task"></div>
+
+            <!--lists-->
+            <div class="task">
+                <ul class="main-list">
+                    <!--first list-->
+                    <li>
+                        <h3><span class="arrow">&#9662</span>New Task</h3>
+
+                        <ul class="secondary-list">
+
+                            <li>
+                                <span class="circle checked">&check;</span>
+                                <p class="list-item">Quarterly newsletter</p>
+                                <span class="tag editorial">Editorial</span>
+                            </li>
+                        </ul>
+                    </li>
+                    <!--/first list-->
+
+                    <!--second list-->
+                    <li>
+
+                        <h3><span class="arrow">&#9662</span>Today</h3>
+
+                        <ul class="secondary-list">
+                            <li>
+                                <span class=" circle checked"></span>
+                            </li>
+                            <li>
+                                <span class="circle unchecked">&cross;</span>
+                            </li>
+                            <li>
+                                <span></span>
+                            </li>
+                            <li>
+                                <span></span>
+                            </li>
+                    </li>
+                    <!--/second list-->
+
+                    <!--third list-->
+                    <li>
+                        <h3><span class="arrow">&#9662</span>Upcoming</h3>
+
+                        <ul class="secondary-list">
+                            <li>
+                                <span></span>
+                            </li>
+                            <li>
+                                <span></span>
+                            </li>
+                            <li>
+                                <span></span>
+                            </li>
+                            
+                             <li>
+                                <span></span>
+                            </li>  
+                    </li>
+                    <!--/third list-->
+
+                </ul>
+            </div>
 
         </div>
     </main>
